--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@apollo/server": "^4.10.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "mongoose": "^8.0.4"
